fix: add padding to productItem to fix name clipping edge of border.

--- a/src/components/ProductItem/productitem.scss
+++ b/src/components/ProductItem/productitem.scss
@@ -11,6 +11,21 @@
   align-items: center;
 }
 
+.item-img {
+  width: 73%;
+  margin-top: 10px;
+}
+
+.item-name {
+  margin: 1.5rem 0 0 0;
+  padding: 3px;
+  font-size: 1.4rem;
+}
+
+.item-price {
+  font-family: index.$fontPrice;
+}
+
 @media screen and (max-width: 655px) {
   #component_item {
     width: 130px;
@@ -20,18 +35,10 @@
       font-size: 0.8rem;
     }
   }
-}
 
-.item-img {
-  width: 73%;
-  margin-top: 10px;
-}
-
-.item-name {
-  margin: 1.5rem 5px 0 5px;
-  font-size: 1.4rem;
-}
-
-.item-price {
-  font-family: index.$fontPrice;
+  .item-name {
+    margin: 0.5rem 0 0 0;
+    padding: 3px;
+    font-size: 1.4rem;
+  }
 }
